# COLLABOTHON24

./: .env.copy  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1a85f439292b_initial.py  2024_10_18_2305-77726448f0a2.py  2024_10_19_1007-985d18be17b4.py  4b4fadb1882a_fix_depracated.py
backend/: Dockerfile  entrypoint.sh  main.py  pyproject.toml  temp
backend/controller/: main.py  users.py
backend/database/: currencies.json  embeddings.npy  labels.npy  one-element.npy  tables.py  tags.json  test-labels.npy  test.npy  transactions.json  users.py  utils.py
backend/model/: generate_embeddings.py  llm.py  model.py  prompt_template.txt  utils.py
backend/suggestions/: prompt_template.txt  suggestions.py
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: axios.ts  tagsEndpoint.ts  transactionsEndpoint.ts
frontend/src/components/header/: header.css  header.tsx
frontend/src/components/main/: main.css  main.tsx
frontend/src/components/ui/: circle-chart.tsx  data-table-extra.tsx  data-table.tsx  date-picker.tsx  multiple-chart.tsx  table.tsx  tabs.tsx  toggle-group.tsx
frontend/src/interfaces/event/: eventInterface.ts
frontend/src/pages/: HomePage.tsx
frontend/src/store/: asyncThunks.ts
frontend/src/store/app/: store.ts
frontend/src/store/slices/events/: eventsSlice.ts
frontend/src/styles/: globals.css
